fixed WMS overlays z-index :-/, prepare v31beta9

--- a/leaflet-dist/leaflet.css
+++ b/leaflet-dist/leaflet.css
@@ -144,11 +144,12 @@
 .leaflet-objects-pane { z-index: 3; }
 .leaflet-overlay-pane { z-index: 4; }
 .leaflet-shadow-pane { z-index: 5; }
-.leaflet-marker-pane { z-index: 15; } /*changed RH*/
-.leaflet-popup-pane { z-index: 16; } /*changed RH*/	
+.leaflet-marker-pane { z-index: 19; } /*changed RH*/
+.leaflet-popup-pane { z-index: 20; } /*changed RH*/	
 .leaflet-tile {
 	filter: inherit;
 	visibility: hidden;
+	z-index: 18; /*added RH*/
 	}
 .leaflet-tile-loaded {
 	visibility: inherit;
